# soundlens-api

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: .devcontainer.json  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
app/: main.py
app/api/routes/: auth.py  tracks.py
app/core/: config.py
src/: index.ts
